# penguin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_PYPI.md  penguin.py  setup.cfg  setup.py  test.py
.github/: pre-commit.yaml
penguin_py.egg-info/: SOURCES.txt  top_level.txt
src/: __init__.py  get_time_msg.py
src/penguin_py/: __init__.py  colour_map.py  get_default_colours.py  get_logger_colour.py  log_args.py  log_return.py  penguin.py  penguin_py.py  post.py  pre.py  test.py
src/penguin_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/penguin_py/colours/: __init__.py  colour_map.py  get_default_colours.py  get_logger_colour.py
src/penguin_py/logs/: __init__.py  log_args.py  log_errors.py  log_return.py
src/penguin_py/penguin_py.egg-info/: PKG-INFO  SOURCES.txt
src/penguin_py/processing/: __init__.py  get_time_msg.py  post.py  pre.py  processing.py
