[metadata]
name = penguin
version = 0.2.2
author = espitiaandres
author_email = espitiaandres123@gmail.com
description = Penguin: a customizable stopwatch decorator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/espitiaandres/penguin
project_urls =
  Bug Tracker = https://github.com/espitiaandres/penguin/issues
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
